# flyte-devbox-mcp-expo-demo

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.claude/: settings.json
.flyte/: config.yaml
scripts/: reset.sh
tasks/: cursed_sandwiches.py
